# sentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  sample_settings.ini
migrations/: env.py  script.py.mako
migrations/versions/: 2024_02_17_1609-ea09ee8d74e9_first_mig.py
sentinel/: config.py  constants.py  jinja.py  utils.py
sentinel/api/: app.py  dependencies.py
sentinel/api/namespaces/: hello.py
sentinel/api/schemas/: hello.py
sentinel/api/services/: hello.py
sentinel/cli/: cli.py
sentinel/models/: __init__.py  base.py  modelitos.py
tests/: test_version.py
