[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "no"
authors = ["crossnox <imermet@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
youconfigme = "^0.10.2"
alembic = "^1.11.1"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.22.0"
types-setuptools = "^67.8.0.0"
sqlparse = "^0.4.4"
jinja2 = "^3.1.2"
jinjasql = "^0.1.8"
psycopg2-binary = "^2.9.6"
python-json-logger = "^2.0.7"
rich = "^13.3.5"
jinjasql2 = "^0.1.11"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pdbpp = "^0.10.3"
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
pre-commit = "^3.3.2"
darglint = "^1.8.1"
pylint = "^2.17.4"
pytest = "^7.3.1"
pycln = "^2.1.3"
autoimport = "^1.3.3"

[tool.poetry.scripts]
sentinel = "sentinel.cli.cli:cli"

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
force_sort_within_sections = true
include_trailing_comma = true
indent = "    "
known_third_party = [ "Cython", "numpy", "dateutil", "matplotlib", "python-dateutil", "pytz", "pyarrow", "pytest", "pandas",]
length_sort = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pylint.MASTER]
jobs = 1

[tool.pylint."MESSAGES CONTROL"]
disable = [ "C", "R", "fixme", "unspecified-encoding", "no-name-in-module", "raise-missing-from"]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
